sidebar didn't offer to update if update wasn'tknown to feed

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -683,13 +683,13 @@ $(function(){
 	});
 
 	var iconHoverTimer;
-	$("body").on("mouseover",".ca_displayIcon,.infoButton",function() {
+	$("body").on("mouseover",".ca_displayIcon,.infoButton,.displayIcon,.card_readmore",function() {
 		var icon = this;
 		iconHoverTimer = setTimeout(function() {
 			icon.click();
 		},4000);
 	});
-	$("body").on("mouseout",".ca_displayIcon,.infoButton",function() {
+	$("body").on("mouseout",".ca_displayIcon,.infoButton,displayIcon,.card_readmore",function() {
 		clearTimeout(iconHoverTimer);
 	});
 
