cards wouldn't reflect plugin update available until feed knew

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2939,7 +2939,7 @@ function setupActionCentre() {
 
 function postCheckForUpdates() {
 	setupActionCentre();
-	refreshDisplay();
+	$(".selectedMenu").click();
 }
 </script>
 
